deployments/drink-menu/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: drink-menu
spec:
  serviceName: "postgres"
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        runAsUser: 2003 # Maps to the "drink-menu" user on the nas
      containers:
        - name: postgres
          image: postgres:14.1
          args:
            - -c
            - 'config_file=/etc/postgresql/postgres.conf'
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume
            - mountPath: /etc/postgresql
              name: postgres-config-volume
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-pv-claim
        - name: postgres-config-volume
          configMap:
            name: postgres-config-file
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: drink-menu
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
