deployments/drink-menu/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: drink-menu-ingressroute
  namespace: drink-menu
spec:
  routes:
  - kind: Rule
    match: Host(`menu.blackolivepineapple.pizza`) && (PathPrefix(`/media`) || PathPrefix(`/static`))
    services:
    - kind: Service
      name: nginx-drink-menu-service
      namespace: drink-menu
      port: 80
  - kind: Rule
    match: Host(`menu.blackolivepineapple.pizza`)
    services:
    - kind: Service
      name: django-drink-menu-service
      namespace: drink-menu
      port: 80
  tls:
    certResolver: letsencrypt
